--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.15.5",
+    "firebase-admin": "^8.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^4.4.0-beta.8",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
